# examples-htmx

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/apps/: base.py  quotes.py
src/static/css/: style.css
src/templates/components/: footer.html  svg.html
src/templates/examples/: index.html
src/templates/examples/quotes/: index.html
src/templates/shared/: _layout.html
