[project]
name = "HTMX-examples"
version = "0.0.1"
description = ""
authors = [
    {name = "Yuriy Grinev", email = "yvgrinev@gmail.com"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.1.0",
]
